# SE

./: .gitignore  try  try.cpp  try.cpp~
Kcode/: Avg (1).cpp  Avg.cpp  Avg.h  CMakeCache.txt  Circle.cpp  Circle.h  Edge.cpp  HSV.cpp  adjustHSV.cpp  basic_evaluation.java  corner.cpp  corner.h  evaluation.cpp  evaluation.h  final_demo.cpp  final_demo.java  hybrid_evaluation.java  image_流.java  local_单帧.java  main.cpp  stdafx.h  targetver.h  train三个参数.java  train参数.java  录视频.h  视频转图片（可截取部分）.h  读视频和截取.java
Kcode/all/: Avg.cpp  Avg.h  CMakeCache.txt  CMakeLists.txt  Circle.cpp  HSV.cpp  HSV.h  Makefile  SE  cmake_install.cmake  final_fromCAM.cpp  final_fromCAM.h  final_fromfile.cpp  final_fromfile.h  functionEntrances.cpp  functionEntrances.h  main_all.cpp  stdafx.h
code/: Avg  Avg.cpp  Avg.cpp~  Avg.h  Avg.h~  Binary  Binary.cpp  Binary.cpp~  CMakeCache.txt  CMakeLists.txt  Circle.cpp  Circle.cpp~  Click  Click.cpp  Click.cpp~  HSV.cpp  HSV.cpp~  K  K.cpp  K.cpp~  K2  K2.cpp  K2.cpp~  L  L.cpp  Makefile  Makefile~  Mark.cpp  SE  T  T.cpp  T.cpp~  cmake_install.cmake  note  note~  v1.avi
data/: Thumbs.db
matlab/: CircleT.m  Mytry.m
